--- a/MongoDB/01. Starting new project.ipynb
+++ b/MongoDB/01. Starting new project.ipynb
@@ -52,7 +52,7 @@
    "id": "8b8215d0",
    "metadata": {},
    "source": [
-    "You can also change the path"
+    "You can also change the path to your database\""
    ]
   },
   {
@@ -66,7 +66,7 @@
     "        \n",
     "# change it to\n",
     "\n",
-    "mongodb+srv://piotrsabatura:<password>@cluster0.26sla.mongodb.net/mynewpath?retryWrites=true&w=majority&appName=Cluster0"
+    "mongodb+srv://piotrsabatura:<password>@cluster0.26sla.mongodb.net/myDBname?retryWrites=true&w=majority&appName=Cluster0"
    ]
   },
   {
@@ -92,7 +92,11 @@
    "source": [
     "Working fith vanilla MongoDB forces developers to write a lot of boiler code. To avoid this we can use mongoose.\n",
     "\n",
-    "To install it just simply enter \"npm install mongoose\" in your terminal."
+    "To install it just simply enter \"npm install mongoose\" in your terminal.\n",
+    "\n",
+    "###### Using mongoose to connect with MongoDB.\n",
+    "\n",
+    "Below function in utils.js is checking connection to the DB. Otherwise it would create another connection after each visit to the page where this function is imported."
    ]
   },
   {
@@ -101,7 +105,26 @@
    "id": "b839f646",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## utils.js\n",
+    "const { default: mongoose } = require(\"mongoose\")  \n",
+    "\n",
+    "const connection = {};  # variable which \"holds\" the connection\n",
+    "\n",
+    "export const connectToDb = async () => {\n",
+    "    try {\n",
+    "        if(connection.isConnected) {  # if it exists, do nothing\n",
+    "            console.log(\"Using existing connection\")\n",
+    "            return;\n",
+    "        }\n",
+    "        const db = await mongoose.connect(process.env.MONGO); # if there is no connection, create a new one.\n",
+    "        connection.isConnected = db.connection[0].readyState; # assign state to connection.isConnected\n",
+    "    } catch (error) {\n",
+    "        console.log(error)\n",
+    "        throw new Error(error);\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
