new mongoDB and mongoose notes

--- a/MongoDB/02. Creating models.ipynb
+++ b/MongoDB/02. Creating models.ipynb
@@ -94,6 +94,24 @@
    "source": [
     "export const User = mongoose.models.User || mongoose.model(\"User\", userSchema); # if there is no user, create a new one"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4c47175",
+   "metadata": {},
+   "source": [
+    "###### Important\n",
+    "\n",
+    "Mongoose tooks collection name and converts it to lower case and plural. So when we have mongoose.model(\"User\", userSchema), it will \"look\" for collection in our database called \"users\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd201ecc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
