next.js notes - corrected mistakes

--- a/Next.js/13. Next.js authentication with Auth.js with custom credentials.ipynb
+++ b/Next.js/13. Next.js authentication with Auth.js with custom credentials.ipynb
@@ -318,8 +318,14 @@
     "#### add new provider to NextAuth();\n",
     "\n",
     "export const { handlers, signIn, signOut, auth } = NextAuth({\n",
-    "  providers: [\n",
-    "    GitHub({  \n",
+    "  handlers: { GET, POST },\n",
+    "      auth,\n",
+    "      signIn,\n",
+    "      signOut,\n",
+    "    } = NextAuth({\n",
+    "      ...authConfig,\n",
+    "      providers: [\n",
+    "        GitHub({  \n",
     "      clientId: process.env.AUTH_GITHUB_ID,\n",
     "      clientSecret: process.env.AUTH_GITHUB_SECRET,\n",
     "    }),\n",
