--- a/Next.js/15. Next.js middleware.ipynb
+++ b/Next.js/15. Next.js middleware.ipynb
@@ -25,9 +25,22 @@
    "source": [
     "## middleware.js\n",
     "\n",
+    "import NextAuth from \"next-auth\";\n",
+    "import { authConfig} from \"./lib/auth.config\"\n",
+    "\n",
+    "export default NextAuth(authConfig).auth;\n",
+    "\n",
+    "\n",
     "export const config = {\n",
-    "    matcher: ['/((?!api|static|.*\\\\..*|_next).*'],\n",
-    "}"
+    "    matcher: [\n",
+    "      '/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt).*)',\n",
+    "    ],\n",
+    "  }\n",
+    "\n",
+    "## below one is without imports, was not working but I keep it just in case (it's a solution from tutorial)\n",
+    "# export const config = {\n",
+    "#     matcher: ['/((?!api|static|.*\\\\..*|_next).*'],\n",
+    "# }"
    ]
   },
   {
@@ -49,7 +62,8 @@
     "\n",
     "export const authConfig = {\n",
     "    pages: {\n",
-    "        signIn: \"/login\"\n",
+    "        signIn: \"/login\"  ## this is a page the use will be redirected to, when he's not logged in (when the callback func...\n",
+    "        ## ... will return false \n",
     "    },\n",
     "    providers: [],\n",
     "    callbacks: {\n",
@@ -101,6 +115,98 @@
     "      },\n",
     "    },\n",
     "  };"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f17ce16",
+   "metadata": {},
+   "source": [
+    "Now, the auth.js must be modified."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa96f01b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import NextAuth from \"next-auth\";\n",
+    "import GitHub from \"next-auth/providers/github\";\n",
+    "import Credentials from \"next-auth/providers/credentials\";\n",
+    "import { connectToDb } from \"./utils\";\n",
+    "import { User } from \"./models\";\n",
+    "import bcrypt from \"bcryptjs\";\n",
+    "import {authConfig} from \"./auth.config\" ## import authConfig\n",
+    "\n",
+    "const login = async (credentials) => {\n",
+    "  try {\n",
+    "    connectToDb();\n",
+    "    const user = await User.findOne({username: credentials.username})\n",
+    "\n",
+    "    if (!user) {\n",
+    "      throw new Error(\"Wrong credentials!\");\n",
+    "    }\n",
+    "\n",
+    "    const isPasswordCorrect = await bcrypt.compare(credentials.password, user.password);\n",
+    "\n",
+    "    if (!isPasswordCorrect) {\n",
+    "      throw new Error(\"Wrong credentials\")\n",
+    "    }\n",
+    "\n",
+    "    return user\n",
+    "\n",
+    "  } catch (error) {\n",
+    "    console.log(error)\n",
+    "    throw new Error(\"Failed to login\")\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "export const { handlers, signIn, signOut, auth } = NextAuth({\n",
+    "  ...authConfig,  ## spread authConfig\n",
+    "  providers: [\n",
+    "    GitHub({\n",
+    "      clientId: process.env.AUTH_GITHUB_ID,\n",
+    "      clientSecret: process.env.AUTH_GITHUB_SECRET,\n",
+    "    }),\n",
+    "    Credentials({\n",
+    "      async authorize(credentials) {\n",
+    "        try {\n",
+    "          const user = await login(credentials);\n",
+    "          return user\n",
+    "        } catch (error) {\n",
+    "          return null\n",
+    "        }\n",
+    "      }\n",
+    "    })\n",
+    "  ],\n",
+    "  callbacks: {\n",
+    "    async signIn({user, account, profile}) {\n",
+    "      if (account?.provider === \"github\") {\n",
+    "        connectToDb();\n",
+    "        try {\n",
+    "          const user = await User.findOne({email: profile?.email});\n",
+    "          if (!user) {\n",
+    "            const newUser = new User({\n",
+    "              username: profile?.login,\n",
+    "              email: profile?.email,\n",
+    "              img: profile?.avatar_url,\n",
+    "            });\n",
+    "\n",
+    "            await newUser.save();\n",
+    "          }\n",
+    "\n",
+    "        } catch (error) {\n",
+    "          console.log(error)\n",
+    "          return false\n",
+    "        }\n",
+    "      }\n",
+    "      return true\n",
+    "    },\n",
+    "    ...authConfig.callbacks  ## spread callbacks from auth.config.js\n",
+    "  },\n",
+    "})"
    ]
   }
  ],
