new react notes

--- a/React/19. useModal custom hook - my own concept.ipynb
+++ b/React/19. useModal custom hook - my own concept.ipynb
@@ -211,7 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import useModal from \"@/customHooks/useModal\"\n",
     "import { ModalType } from \"@/lib/types\";\n",
     "\n",
     "\n",
@@ -230,6 +229,15 @@
     "    handleFunction,\n",
     "    closeFunction\n",
     "  } = props;\n",
+    "    \n",
+    "\n",
+    "  ## we can create a handleClick function \n",
+    "  const handleClick = () => {\n",
+    "    ## call function that was passed in props to do something after confirmation in modal\n",
+    "    handleFunction();\n",
+    "    ## call function that was passed in props to close the modal\n",
+    "    closeFunction();\n",
+    "  }\n",
     "\n",
     "\n",
     "  return (\n",
@@ -237,7 +245,7 @@
     "      ## we can now utilize passsed props in our component\n",
     "      {messageTitle}\n",
     "      {messageText}\n",
-    "      <button onClick={handleFunction}>OK</button>\n",
+    "      <button onClick={handleClick}>OK</button>\n",
     "      <button onClick={closeFunction}>Cancel</button>\n",
     "      ## we can create a different modals and use it conditionally. For example we set our modalType as an \"information\", \n",
     "      ## so we can create another component InformationModal and use it only when the modalType is \"information\"\n",
