new Tailwind notes

--- a/Tailwind CSS/4. Typography.ipynb
+++ b/Tailwind CSS/4. Typography.ipynb
@@ -50,6 +50,34 @@
     "\n",
     "Documentation:<br>\n",
     "https://tailwindcss.com/docs/text-transform\n",
+    "\n",
+    "###### Letter Spacing\n",
+    "\n",
+    "Syntax:\n",
+    "class='tracking-{value}'\n",
+    "\n",
+    "Documentation:<br>\n",
+    "https://tailwindcss.com/docs/letter-spacing\n",
+    "\n",
+    "###### Line Height\n",
+    "\n",
+    "Syntax:\n",
+    "class='leading-{value}'\n",
+    "\n",
+    "Documentation:<br>\n",
+    "https://tailwindcss.com/docs/line-height\n",
+    "\n",
+    "###### Line Clamp\n",
+    "\n",
+    "Allows to show limited lines of text (for example on a Blog page)\n",
+    "\n",
+    "Syntax:\n",
+    "class='line-clamp-{value}' (range from 1 to 6)\n",
+    "\n",
+    "Example - class='line-clamp-2 will show only first two line of paragraph\n",
+    "\n",
+    "Documentation:<br>\n",
+    "https://tailwindcss.com/docs/line-clamp\n",
     "\n"
    ]
   },
