new Tailwind notes

--- a/Tailwind CSS/4. Typography.ipynb
+++ b/Tailwind CSS/4. Typography.ipynb
@@ -26,6 +26,9 @@
     "\n",
     "###### Font Weight\n",
     "\n",
+    "Syntax:<br>\n",
+    "class='font-{value}'\n",
+    "\n",
     "Documentation:<br>\n",
     "https://tailwindcss.com/docs/font-weight\n",
     "\n",
@@ -36,7 +39,8 @@
     "\n",
     "###### Font Size\n",
     "\n",
-    "Syntax: text-* \n",
+    "Syntax:<br>\n",
+    "class='text-{value}' \n",
     "\n",
     "Documentation:<br>\n",
     "https://tailwindcss.com/docs/font-size\n",
@@ -53,7 +57,7 @@
     "\n",
     "###### Letter Spacing\n",
     "\n",
-    "Syntax:\n",
+    "Syntax:<br>\n",
     "class='tracking-{value}'\n",
     "\n",
     "Documentation:<br>\n",
@@ -61,7 +65,7 @@
     "\n",
     "###### Line Height\n",
     "\n",
-    "Syntax:\n",
+    "Syntax:<br>\n",
     "class='leading-{value}'\n",
     "\n",
     "Documentation:<br>\n",
@@ -71,7 +75,7 @@
     "\n",
     "Allows to show limited lines of text (for example on a Blog page)\n",
     "\n",
-    "Syntax:\n",
+    "Syntax:<br>\n",
     "class='line-clamp-{value}' (range from 1 to 6)\n",
     "\n",
     "Example - class='line-clamp-2 will show only first two line of paragraph\n",
