--- a/Tailwind CSS/5. Display and position.ipynb
+++ b/Tailwind CSS/5. Display and position.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "###### Placement\n",
     "\n",
-    "Syntax:\n",
+    "Syntax:<br>\n",
     "{direction}-{value}\n",
     "\n",
     "direction -> top, right, bottom, left<br>\n",
