new Next.js notes

--- a/Next.js/10. Dynamic metadata.ipynb
+++ b/Next.js/10. Dynamic metadata.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Dynamic metadata\n",
     "\n",
-    "If we want to implement dynamic metadata for every single page in our project we first have to prepare the template in main layout file (in root folder)."
+    "Metadata is necessary for SEO. It allows to display short data about your page in search engines. \n",
+    "If we want to implement dynamic metadata for project we can set it in the main layout file in app folder."
    ]
   },
   {
@@ -39,7 +40,7 @@
    "id": "20de38c9",
    "metadata": {},
    "source": [
-    "Now, in the other pages we can use it like below."
+    "We can implement data for every single page. It will be taken into account in search engines because it has a higher priority."
    ]
   },
   {
