new Angular notes

--- a/Angular/09. Get API call intergration.ipynb
+++ b/Angular/09. Get API call intergration.ipynb
@@ -92,18 +92,16 @@
     "export class GetApi implements OnInit {  ## <--- implement OnInit to trigger method after component initialization\n",
     "\n",
     "  http = inject(HttpClient);\n",
-    "  userList: any[] = [];  ## <--- user's list for storage after fetching\n",
+    "  userList: any[] = [];  ## <--- I used signal for storing the fetched data\n",
     "\n",
     "  ngOnInit(): void {  ## <--- invoke method after initialization\n",
     "    this.getUsers();\n",
     "  }\n",
     "\n",
     "  getUsers() {\n",
-    "      \n",
-    "    ###### this is how the method looks like ######\n",
-    "    this.http.get(\"https://jsonplaceholder.typicode.com/users\").subscribe((result: any) => {\n",
-    "      this.userList = result\n",
-    "    })\n",
+    "    this.http.get(\"https://api.freeprojectapi.com/api/GoalTracker/getAllUsers\").subscribe((res: any) => {\n",
+    "      this.usersList.set(res);\n",
+    "    });\n",
     "  }\n",
     "\n",
     "}"
