new Angular notes

--- a/Angular/04. Signals.ipynb
+++ b/Angular/04. Signals.ipynb
@@ -35,7 +35,11 @@
     "  styleUrl: './signal-example.css',\n",
     "})\n",
     "export class SignalExample {\n",
-    "  courseName = signal<string>(\"Angular\");\n",
+    "  courseName = signal<string>(\"Angular\"); ## string\n",
+    "    \n",
+    "  student = signal({name:'PS', city: 'Gdańsk'}) ## object \n",
+    "    \n",
+    "  cityList = signal([\"Gdańsk\", \"Sopot\", \"Gdynia\"]) ## array\n",
     "}"
    ]
   },
@@ -54,7 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<span>{{courseName()}}</span> ## <--- syntax to get value looks like a function"
+    "<span>{{courseName()}}</span> ## <--- syntax to get value looks like a function\n",
+    "\n",
+    "<span>{{student().name}}</span>"
    ]
   },
   {
