new Angular notes

--- a/Angular/10. Template Form.ipynb
+++ b/Angular/10. Template Form.ipynb
@@ -100,6 +100,135 @@
     "    )\n",
     "  }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a17fae0",
+   "metadata": {},
+   "source": [
+    "## Forms\n",
+    "\n",
+    "Let's create a simple userObj in one of our components and import FormsModule."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4328c977",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { Component } from '@angular/core';\n",
+    "import { FormsModule } from '@angular/forms';\n",
+    "\n",
+    "@Component({\n",
+    "  selector: 'app-user-master',\n",
+    "  imports: [FormsModule],\n",
+    "  templateUrl: './user-master.html',\n",
+    "  styleUrl: './user-master.css',\n",
+    "})\n",
+    "export class UserMaster {\n",
+    "\n",
+    "  userObj = {\n",
+    "    id: 0,\n",
+    "    name: \"\",\n",
+    "    username: \"\",\n",
+    "\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f2b520",
+   "metadata": {},
+   "source": [
+    "Create an HTML form. Pay attention how to control validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23028163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<form class=\"container mt-4\">\n",
+    "  <div class=\"mb-3\">\n",
+    "    <label for=\"id\" class=\"form-label\">ID</label>\n",
+    "    <input type=\"number\" [(ngModel)]=\"userObj.id\" class=\"form-control\" id=\"id\" name=\"id\">\n",
+    "  </div>\n",
+    "\n",
+    "  <div class=\"mb-3\">\n",
+    "    <label for=\"name\" class=\"form-label\">Name</label>\n",
+    "    <input \n",
+    "        type=\"text\" \n",
+    "        #name=\"ngModel\"   <--- this is new and must be added if you want to control the errors\n",
+    "        [(ngModel)]=\"userObj.name\" \n",
+    "        class=\"form-control\" \n",
+    "        id=\"name\" name=\"name\" \n",
+    "        required \n",
+    "        minlength=\"5\"\n",
+    "    >\n",
+    "    @if (name.touched || name.dirty) {  \n",
+    "        ## <- touched means that user clicked the input field and then clicked somewhere else\n",
+    "        ## <- dirty means that the user changed the value from it's original state\n",
+    "        <div class=\"text-danger\">\n",
+    "            @if (name.errors?.['required']) {\n",
+    "                <span>This is required</span>\n",
+    "            } @else if (name.errors?.[\"minlength\"]) {\n",
+    "                <span>Min 5 chars needed</span>\n",
+    "            }\n",
+    "        </div>\n",
+    "    }\n",
+    "  </div>\n",
+    "\n",
+    "  <div class=\"mb-3\">\n",
+    "    <label for=\"username\" class=\"form-label\">Username</label>\n",
+    "    <input \n",
+    "        type=\"text\" \n",
+    "        [(ngModel)]=\"userObj.username\" \n",
+    "        class=\"form-control\" \n",
+    "        id=\"username\" \n",
+    "        name=\"username\"\n",
+    "    >\n",
+    "  </div>\n",
+    "\n",
+    "  \n",
+    "  <button type=\"submit\" class=\"btn btn-primary\">Submit</button>\n",
+    "</form>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb0248bf",
+   "metadata": {},
+   "source": [
+    "We can control a form validation by adding #formData=\"ngForm\" to form tag."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f3048df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<form \n",
+    "  #formData=\"ngForm\" \n",
+    "  class=\"container mt-4\"\n",
+    ">\n",
+    "\n",
+    "###..rest of the code\n",
+    "\n",
+    "<button \n",
+    "    type=\"submit\" \n",
+    "    [disabled]=\"formData.invalid\" ### <-- now the button is disabled until \n",
+    "    class=\"btn btn-primary\"\n",
+    ">\n",
+    "    Submit\n",
+    "</button>\n"
+   ]
   }
  ],
  "metadata": {
