new Angular notes

--- a/Angular/09. Get API call intergration.ipynb
+++ b/Angular/09. Get API call intergration.ipynb
@@ -29,7 +29,8 @@
     "  providers: [\n",
     "    provideBrowserGlobalErrorListeners(),\n",
     "    provideRouter(routes),\n",
-    "    provideHttpClient(),  ## <--- add this code\n",
+    "    provideHttpClient(),  ## <--- add this code (in Angular 21 it's not required ), \n",
+    "                          ## but you can add this if you want additional functionality\n",
     "  ]\n",
     "};"
    ]
