--- a/Angular/10. Template and Reactive Form.ipynb
+++ b/Angular/10. Template and Reactive Form.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "## Template Form in Angular\n",
     "\n",
+    "# REMARK: Reactive forms are more preffered, so it's better to understand them!\n",
+    "\n",
     "In this chapter, I use https://www.freeprojectapi.com/, which can be used to learn and test your CRUD operations.\n",
     "\n",
     "Let's first create an import  of FormsModule in the User component and inject HttpClient. Alos add a userObj, which will store the input data from the form."
@@ -223,11 +225,193 @@
     "\n",
     "<button \n",
     "    type=\"submit\" \n",
-    "    [disabled]=\"formData.invalid\" ### <-- now the button is disabled until \n",
+    "    [disabled]=\"formData.invalid\" ### <-- now the button is disabled until form is valid\n",
     "    class=\"btn btn-primary\"\n",
     ">\n",
     "    Submit\n",
-    "</button>\n"
+    "</button>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25b51d32",
+   "metadata": {},
+   "source": [
+    "## Reactive forms\n",
+    "\n",
+    "Reactive forms are preffered because they have more possibilties than template forms.\n",
+    "The difference is also that in reactive forms we have more code in class components, and less in HTML. \n",
+    "\n",
+    "In Reactive Forms, we don't use object. We have to import  ReactiveFormsModule to the component. Then we create a new FormGroup variable. Example below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b293030f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { Component } from '@angular/core';\n",
+    "import { FormControl, FormGroup, ReactiveFormsModule } from '@angular/forms';\n",
+    "\n",
+    "@Component({\n",
+    "  selector: 'app-reactive-form',\n",
+    "  imports: [ReactiveFormsModule],     ## <--- import module\n",
+    "  templateUrl: './reactive-form.html',\n",
+    "  styleUrl: './reactive-form.css',\n",
+    "})\n",
+    "export class ReactiveForm {\n",
+    "\n",
+    "  ## create new FormGroup variable.\n",
+    "  userForm: FormGroup = new FormGroup({\n",
+    "    name: new FormControl(\"\"),\n",
+    "    userName: new FormControl(\"\"),\n",
+    "    email: new FormControl(\"\"),\n",
+    "    password: new FormControl(\"\"),\n",
+    "  })\n",
+    "  \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9e12a18",
+   "metadata": {},
+   "source": [
+    "To bind the html form with userForm, you have to add [formGroup]=\"exampleForm\" attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "488b150c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<form [formGroup]=\"userForm\" class=\"container mt-4\">  ## <--- added [formGroup]=\"userForm\" to bind html with reactive form\n",
+    "\n",
+    "  ## rest of the code\n",
+    "    \n",
+    "</form>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d67d6e54",
+   "metadata": {},
+   "source": [
+    "To bind input field you have to use formControlName attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "940852fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<form [formGroup]=\"userForm\" class=\"container mt-4\">\n",
+    "\n",
+    "  <div class=\"mb-3\">\n",
+    "    <label for=\"name\" class=\"form-label\">Name</label>\n",
+    "    ## use formControlName property to bind the input field with ReactiveForm\n",
+    "    <input type=\"text\" formControlName=\"name\" class=\"form-control\" id=\"name\" name=\"name\">\n",
+    "  </div>\n",
+    "\n",
+    "  <div class=\"mb-3\">\n",
+    "    <label for=\"userName\" class=\"form-label\">Username</label>\n",
+    "    <input type=\"text\" formControlName=\"userName\" class=\"form-control\" id=\"userName\" name=\"userName\">\n",
+    "  </div>\n",
+    "\n",
+    "  <button type=\"submit\" class=\"btn btn-primary\">Submit</button>\n",
+    "  \n",
+    "</form>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cc6818e",
+   "metadata": {},
+   "source": [
+    "You can add build-in validation by adding Validators to useForm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab2ebb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { Component } from '@angular/core';\n",
+    "import { FormControl, FormGroup, ReactiveFormsModule, Validators } from '@angular/forms';\n",
+    "\n",
+    "@Component({\n",
+    "  selector: 'app-reactive-form',\n",
+    "  imports: [ReactiveFormsModule],\n",
+    "  templateUrl: './reactive-form.html',\n",
+    "  styleUrl: './reactive-form.css',\n",
+    "})\n",
+    "export class ReactiveForm {\n",
+    "\n",
+    "  userForm: FormGroup = new FormGroup({\n",
+    "    name: new FormControl(\"\", [Validators.required, Validators.minLength(4)]), ## <--- added validators\n",
+    "    userName: new FormControl(\"\", [Validators.required]), ## <--- added validators\n",
+    "    email: new FormControl(\"\", Validators.email),\n",
+    "    password: new FormControl(\"\"),\n",
+    "  })\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d30da566",
+   "metadata": {},
+   "source": [
+    "To show validation in HTML we use similar solution as for template forms.\n",
+    "We use syntax => exampleForm.controls['propertyName'].touched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d8e546a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<div class=\"mb-3\">\n",
+    "    <label for=\"name\" class=\"form-label\">Name</label>\n",
+    "    <input type=\"text\" formControlName=\"name\" class=\"form-control\" id=\"name\" name=\"name\">\n",
+    "    @if (userForm.controls['name'].touched || userForm.controls['name'].dirty) { ## <--- we use touched and dirty\n",
+    "        <div class=\"text-danger\">\n",
+    "            @if (userForm.controls['name'].errors?.['required']) {\n",
+    "                <span>This is required</span>\n",
+    "            } @else if (userForm.controls['name'].errors?.['minlength']) {\n",
+    "                <span> Min 4 Char needed</span>\n",
+    "            }\n",
+    "        </div>\n",
+    "    }\n",
+    "  </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6379f561",
+   "metadata": {},
+   "source": [
+    "We block the button in similar way as for the tempalte forms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "459e993f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<button type=\"submit\" [disabled]=\"userForm.invalid\" class=\"btn btn-primary\">Submit</button>"
    ]
   }
  ],
