new Angular notes

--- a/Angular/09. Get API call intergration.ipynb
+++ b/Angular/09. Get API call intergration.ipynb
@@ -104,7 +104,176 @@
     "      this.usersList.set(res);\n",
     "    });\n",
     "  }\n",
+    "    \n",
+    "  ## better way to fetch data and control responce\n",
+    "  \n",
+    "  getUsers() {\n",
+    "    this.http.post(\"https://api.freeprojectapi.com/api/GoalTracker/getAllUsers\").subscribe({\n",
+    "      next: (result:any) => {\n",
+    "        this.usersList = res;\n",
+    "        console.log(\"users succesfully fetched\")\n",
+    "      },\n",
+    "      error: (error: any) => {\n",
+    "        console.log(\"couldn't fetch data\", error)\n",
+    "      }\n",
+    "    })\n",
+    "  }\n",
     "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44b90480",
+   "metadata": {},
+   "source": [
+    "Above method is not working as I wanted to, because the fetched data didn't display even when I used ngOnInit(). To avoid such unpleasant situation I used signal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde142c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { HttpClient } from '@angular/common/http';\n",
+    "import { Component, inject, OnInit, signal } from '@angular/core';\n",
+    "import { FormsModule } from '@angular/forms';\n",
+    "\n",
+    "@Component({\n",
+    "  selector: 'app-batch-master',\n",
+    "  imports: [FormsModule, ],\n",
+    "  templateUrl: './batch-master.html',\n",
+    "  styleUrl: './batch-master.css',\n",
+    "})\n",
+    "export class BatchMaster {\n",
+    "\n",
+    "  ngOnInit(): void {\n",
+    "    this.getAllBatches();\n",
+    "  }\n",
+    "  \n",
+    "  allBatches = signal<Batch[]>([]); ## <-- signal variable\n",
+    "  http = inject(HttpClient)\n",
+    "  \n",
+    "  getAllBatches() {\n",
+    "    this.http.get(\"https://api.freeprojectapi.com/api/FeesTracking/batches\").subscribe({\n",
+    "      next: (res: any) => {\n",
+    "        this.allBatches.set(res);\n",
+    "        console.log(this.allBatches)\n",
+    "      },\n",
+    "      error: (error: any) => {\n",
+    "        console.log(\"something went wrong\", error.error.message)\n",
+    "      }\n",
+    "    })\n",
+    "  }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "class Batch {\n",
+    "  batchId: number;\n",
+    "  batchName: string;\n",
+    "  createdDate: Date;\n",
+    "\n",
+    "  constructor() {\n",
+    "    this.batchId = 0;\n",
+    "    this.batchName = \"\",\n",
+    "    this.createdDate = new Date();\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2e8241",
+   "metadata": {},
+   "source": [
+    "### POST api\n",
+    "\n",
+    "For this part of the chapter I will use FreeProjectApi.com -> FeesTracking. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ebdd945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "  \"batchId\": 0,\n",
+    "  \"batchName\": \"string\",\n",
+    "  \"createdDate\": \"2026-01-31T06:28:49.213Z\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8cb562e",
+   "metadata": {},
+   "source": [
+    "To post the object we need first to create it. We could use standard code like below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e4b3628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## this is an example, don't do like this!!!!!!!\n",
+    "\n",
+    "newBatchObj: any = {\n",
+    "    batchId: 0,\n",
+    "    batchName: \"sampleName\",\n",
+    "    createdDate: new Date()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f504e4c0",
+   "metadata": {},
+   "source": [
+    "But the proper way to do this is by creating a class of the object we want to add. Here is an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "137a39ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import { Component } from '@angular/core';\n",
+    "\n",
+    "@Component({\n",
+    "  selector: 'app-batch-master',\n",
+    "  imports: [FormsModule],  ## <-- import FormsModule\n",
+    "  templateUrl: './batch-master.html',\n",
+    "  styleUrl: './batch-master.css',\n",
+    "})\n",
+    "export class BatchMaster {\n",
+    "\n",
+    "  newBatchObj: Batch = new Batch(); ## <-- new instance of created class of the object\n",
+    "\n",
+    "}\n",
+    "\n",
+    "## create a class Batch (it can be in a different folder, doesn't have to be in\n",
+    "## the component)\n",
+    "class Batch {\n",
+    "  ## the same properties as the object we want to POST\n",
+    "  batchId: number;\n",
+    "  batchName: string;\n",
+    "  createdDate: Date;\n",
+    "\n",
+    "  ## constructor to initialize the class\n",
+    "  constructor() {\n",
+    "    this.batchId = 0;\n",
+    "    this.batchName = \"\",\n",
+    "    this.createdDate = new Date();\n",
+    "  }\n",
     "}"
    ]
   }
